# Voksel

./: CMakeLists.txt  README.md
cmake/: CompilerOptions.cmake  Modules.cmake
engine/: CMakeLists.txt
engine/UI/: Core.cppm  Element.cppm  Font.cppm  Layout.cppm  Manager.cppm  Renderer.cppm  Widgets.cppm
engine/components/: Camera.cppm  ComponentRegistry.cppm  Transform.cppm  Voxel.cppm
engine/components/UI/: Hotbar.cppm
engine/components/camera/: CameraController.cppm
engine/components/voxel/: Voxel.cppm  VoxelRaycast.cppm  VoxelSelection.cppm  VoxelStreamingConfig.cppm
engine/core/: Assert.cppm  CMakeLists.txt  Log.cppm  Types.cppm
engine/ecs/: CMakeLists.txt  Component.cppm  Query.cppm  SystemScheduler.cpp  SystemScheduler.cppm  World.cppm
engine/graphics/: Buffer.cppm  CMakeLists.txt  CommandList.cppm  DX12GraphicsContext.cppm  DescriptorHeap.cppm  Device.cppm  Fence.cppm  Graphics.cppm  GraphicsFactory.cpp  Mesh.cppm  Pipeline.cppm  RenderConfig.cppm  RenderData.cppm  RenderGraph.cppm  RenderPipeline.cppm  Renderer.cppm  RendererDX11.cppm  Resources.cppm  Shader.cppm  ShaderManager.cppm  SwapChain.cppm  Window.cppm
engine/input/: Bindings.cppm  CMakeLists.txt  Core.cppm  Manager.cppm  Window.cppm
engine/maths/: CMakeLists.txt  Core.cppm  Matrix.cppm  Quaternion.cppm  Transform.cppm  Vector.cppm
engine/systems/UI/: Hotbar.cppm  UISystem.cppm
engine/systems/camera/: CameraControllerSystem.cppm  CameraManager.cppm  CameraSystem.cppm
engine/systems/rendering/: RenderDataSystem.cppm  VoxelRenderer.cppm
engine/systems/voxel/: VoxelBootstrap.cppm  VoxelEdit.cppm  VoxelGeneration.cppm  VoxelMeshGenerator.cppm  VoxelMeshing.cppm  VoxelSelectionRender.cppm  VoxelStreaming.cppm  VoxelUpload.cppm
engine/tasks/: CMakeLists.txt  EngineOrchestratorECS.cppm  TaskGraph.cppm  TaskOrchestrator.cppm  TaskProfiler.cppm
engine/ui/: UICore.cppm
engine/utils/: String.cppm
engine/voxel/: Chunk.cppm  VoxelTypes.cppm
game/: CMakeLists.txt  main.cpp
shaders/basic/: Basic.hlsl
shaders/ui/: UI.hlsl
shaders/voxel/: Voxel.hlsl
tests/math/: CMakeLists.txt  core_tests.cpp  matrix_tests.cpp  vector_tests.cpp
